fixed overflow text upgrades

--- a/styles.css
+++ b/styles.css
@@ -525,7 +525,7 @@ align-items: center;
     height: 40%;
 }
 #upgrades h3 {
-    font-size: 4vw;
+    font-size: 2.5vw;
 }
 #upgrades h4 {
     font-size: 2.5vw;
